@@ -2,6 +2,10 @@ Src\Changes.txt
 Add new items to top.
 (This summarizes all changes to all files under Src, including Src\Languages.)
 
+2006-03-26 Kimmo
+ PATCH: [ 1458066 ] Use / as path delimiter in patch files
+  Src: DiffWrapper.cpp
+
 2006-03-24 Kimmo
  PATCH: [ 1457203 ] Create patch from multiple files in folder compare
   Src: DirView.cpp DirView.h MainFrm.cpp
